# snowloader

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  generate_key.py  pyproject.toml
backend/app/: main.py
backend/app/api/models/: __init__.py  contract.py  database.py
backend/app/api/routes/: auth.py  connections.py  contracts.py  pipelines.py  projects.py  s3.py
backend/app/core/: config.py  security.py  tenant.py
backend/app/db/: add_tenant_id_to_users.py  init_db.py  migrate_users_to_tenants.py  session.py
backend/app/services/: contract_service.py  pipeline_service.py  s3_service.py  snowflake_service.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  ErrorBoundary.tsx  index.css  main.tsx
frontend/src/components/: ContractBuilder.tsx  ContractDetails.tsx  ContractTreeView.tsx  DataGovernanceEditor.tsx  EnvironmentConfigEditor.tsx  Layout.tsx  S3ConnectionForm.tsx  SchemaEditor.tsx  SnowflakeConnectionForm.tsx
frontend/src/components/ide/: IdeLayout.tsx  IdeMainArea.tsx  IdeSidebar.tsx  IdeTabs.tsx  SnowflakeLoader.tsx  types.ts
frontend/src/components/ide/editors/: ContractEditor.tsx  PipelineEditor.tsx
frontend/src/pages/: Connections.tsx  Contracts.tsx  CreatePipeline.tsx  Pipelines.tsx  Projects.tsx
frontend/src/utils/: api.ts  useApi.ts
